--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
   <main class="container">
     <div class="gallery" id="works">
-      <div class="gallery-item">
+      <div class="gallery-item gallery-item--image__horizontal">
         <img class="gallery-item--image" src="/img/1.jpg">
       </div>
       <div class="gallery-item">
@@ -79,13 +79,13 @@
       <div class="gallery-item galler-bigger-item">
         <img class="gallery-item--image " src="/img/5.jpg">
       </div>
-      <div class="gallery-item">
+      <div class="gallery-item gallery-item--image__horizontal">
         <img class="gallery-item--image" src="/img/6.jpg">
       </div>
-      <div class="gallery-item">
+      <div class="gallery-item gallery-item--image__horizontal">
         <img class="gallery-item--image" src="/img/7.jpg">
       </div>
-      <div class="gallery-item">
+      <div class="gallery-item gallery-item--image__horizontal">
         <img class="gallery-item--image" src="/img/8.jpg">
       </div>
       <div class="gallery-item">
@@ -103,7 +103,7 @@
       <div class="gallery-item">
         <img class="gallery-item--image" src="/img/13.jpg">
       </div>
-      <div class="gallery-item">
+      <div class="gallery-item gallery-item--image__horizontal">
         <img class="gallery-item--image" src="/img/14.jpg">
       </div>
       <div class="gallery-item">
@@ -148,14 +148,15 @@
       <div class="gallery-item">
         <img class="gallery-item--image" src="/img/28.jpg">
       </div>
-      <div class="gallery-item">
-        <img class="gallery-item--image" src="/img/29.jpg">
+      <div class="gallery-item gallery-item--image__horizontal">
+        <img class="gallery-item--image " src="/img/29.jpg">
       </div>
-      <div class="gallery-item">
-        <img class="gallery-item--image" src="/img/30.jpg">
-      </div>
+
       <div class="gallery-item">
         <img class="gallery-item--image" src="/img/31.jpg">
+      </div>
+      <div class="gallery-item gallery-item--image__horizontal">
+        <img class="gallery-item--image" src="/img/30.jpg">
       </div>
       <div class="gallery-item">
         <img class="gallery-item--image" src="/img/32.jpg">
@@ -173,6 +174,9 @@
         <img class="gallery-item--image" src="/img/36.jpg">
       </div>
       <div class="gallery-item">
+        <img class="gallery-item--image" src="/img/46.jpg">
+      </div>
+      <div class="gallery-item gallery-item--image__horizontal">
         <img class="gallery-item--image" src="/img/37.jpg">
       </div>
       <div class="gallery-item">
@@ -187,21 +191,19 @@
       <div class="gallery-item">
         <img class="gallery-item--image" src="/img/41.jpg">
       </div>
-      <div class="gallery-item">
+      <div class="gallery-item gallery-item--image__horizontal">
         <img class="gallery-item--image" src="/img/42.jpg">
       </div>
-      <div class="gallery-item">
+      <div class="gallery-item gallery-item--image__horizontal">
         <img class="gallery-item--image" src="/img/43.jpg">
       </div>
-      <div class="gallery-item">
+      <div class="gallery-item gallery-item--image__horizontal">
         <img class="gallery-item--image" src="/img/44.jpg">
       </div>
       <div class="gallery-item">
         <img class="gallery-item--image" src="/img/45.jpg">
       </div>
-      <div class="gallery-item">
-        <img class="gallery-item--image" src="/img/46.jpg">
-      </div>
+
     </div>
   </main>
 </body>
