--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>It's Retouch</title>
   </head>
 
-  <body>
+  <body class="light">
     <nav class="header">
       <div href="#">
         <h1 class="logo">Its Retouch</h1>
@@ -25,6 +25,9 @@
           <li><a class="nav-item" href="#about">About</a></li>
           <li class="nav-item contact-me">
             <a class="nav-item" href="">Contacts</a>
+          </li>
+          <li>
+            <i class="fa-solid fa-toggle-off nav-item dark-theme"></i>
           </li>
         </div>
       </ul>
@@ -49,7 +52,10 @@
       </div>
     </section>
 
-    <div class="modal-about" id="modal"></div>
+    <div class="modal-about" id="modal">
+      <a class="button next"></a>
+      <a class="button previous"></a>
+    </div>
     <section class="about">
       <div class="container">
         <div class="about-content" id="about">
