--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
           <li class="nav-item contact-me">
             <a class="nav-item" href="">Contacts</a>
           </li>
-          <li>
-            <i class="fa-solid fa-toggle-off nav-item dark-theme"></i>
-          </li>
         </div>
       </ul>
     </nav>
@@ -37,7 +34,7 @@
       <div class="welcome-container">
         <div class="welcome-content">
           <div class="header-galler">
-            <img class="header-gallery--image" src="/img/28.jpg" />
+            <img class="header-gallery--image" src="/img/25.jpg" />
           </div>
           <div class="header-galler">
             <img class="header-gallery--image" src="/img/10.jpg" />
@@ -77,12 +74,21 @@
     </section>
 
     <main class="container">
+      <div class="darktheme">
+        <i class="fa-solid fa-toggle-off nav-item dark-theme"></i>
+      </div>
       <div class="gallery" id="works">
         <div class="gallery-item gallery-item--image__horizontal">
           <img class="gallery-item--image" src="/img/1.jpg" />
         </div>
+        <div class="gallery-item gallery-item--image__horizontal">
+          <img class="gallery-item--image" src="/img/50.jpg" />
+        </div>
         <div class="gallery-item">
           <img class="gallery-item--image" src="/img/2.jpg" />
+        </div>
+        <div class="gallery-item gallery-item--image__horizontal">
+          <img class="gallery-item--image" src="/img/49.jpg" />
         </div>
         <div class="gallery-item">
           <img class="gallery-item--image" src="/img/3.jpg" />
@@ -174,6 +180,9 @@
         </div>
         <div class="gallery-item">
           <img class="gallery-item--image" src="/img/32.jpg" />
+        </div>
+        <div class="gallery-item gallery-item--image__horizontal">
+          <img class="gallery-item--image" src="/img/48.jpg" />
         </div>
         <div class="gallery-item">
           <img class="gallery-item--image" src="/img/33.jpg" />
